Fixed large quote spacing

--- a/themes/openstack/css/user-stories.css
+++ b/themes/openstack/css/user-stories.css
@@ -335,7 +335,7 @@ a.releaseButton:active {
 }
 
 .nfv .largeQuote {
-    margin-top: 150px;
+    margin-top: 15px;
     color: white;
     font-size: 300%;
 }
